# agentmatrix

./: .dockerignore  .gitignore  .safe_point  BUILD_QUICKSTART.md  CONTAINER_IMAGE_CHANGES.md  DESKTOP_MIGRATION_STATUS.md  Dockerfile  Dockerfile.minimal  EMAIL_PROXY_REFACTORING_COMPLETE.md  EMAIL_PROXY_REFACTORING_SUMMARY.md  GIT_WORKTREE_FIX.md  IMAP_IDLE_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  MIGRATION_PROGRESS.md  MIGRATION_SUMMARY.md  NOTE-项目.md  POWER_MANAGEMENT_IMPLEMENTATION.md  PRODUCTION_BUILD_IMPACT.md  PYINSTALLER_SKILLS_LOADING.md  README_PyPI.md  REFACTORING_SUMMARY.md  REFACTOR_BASELINE.txt  RELEASE_NOTES.md  RELEASE_NOTES_v0.1.5.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v2.0.md  TAURI_CROSS_COMPILATION.md  WORKING_DIRECTORY_FIX.md  WORKTREE_GUIDE.md  agents.db  build_all.sh  build_image.sh  cleanup_worktree.sh  cli_runner.py  client.html  count_lines.sh  echo_test.py  main.py  (+23 more)
Samples/: sample_workspace.txt
agentmatrix-desktop/src-tauri/: ANTS_MOVE_STRATEGY.md  Cargo.toml  REFACTOR_CHECKLIST.md  splash.html  target  tauri.conf.json
agentmatrix-desktop/src-tauri/binaries/: server-aarch64-apple-darwin
agentmatrix-desktop/src-tauri/capabilities/: default.json
agentmatrix-desktop/src-tauri/icons/: icon.icns
agentmatrix-desktop/src-tauri/resources/: shared_env_requirements.txt
agentmatrix-desktop/src-tauri/resources/container-init-scripts/: install_packages.sh
agentmatrix-desktop/src-tauri/resources/matrix-template/.matrix/configs/: .env  email_proxy_config.yml  matrix_config.yml  system_config.yml
agentmatrix-desktop/src-tauri/resources/matrix-template/.matrix/configs/agents/: ITPlanner.yml  OfficeExpert.yml  SystemAdmin.yml  User.yml  browser_collab.yml  deep_researcher.yml  design.yml  knowledge_base.yml  mac_operator.yml  mark.yml  researcher.yml  secretary.yml
agentmatrix-desktop/src-tauri/resources/matrix-template/.matrix/configs/prompts/: collab_mode.md  core_prompt.md  simple_mode.md  system_prompt.md
agentmatrix-desktop/src-tauri/resources/matrix-template/workspace/agent_files/Designer/home/built-in-skills/: animated-video.md  hi-fi-design.md  speaker-notes.md
agentmatrix-desktop/src-tauri/resources/matrix-template/workspace/agent_files/Designer/home/starter-components/: deck-stage-patch.md  deck-stage.js  design-canvas.jsx
agentmatrix-desktop/src-tauri/resources/matrix-template/workspace/agent_files/PPTGuru/home/SKILLS/ppt_skills/: SKILL.md
agentmatrix-desktop/src-tauri/resources/matrix-template/workspace/agent_files/PPTGuru/home/SKILLS/ppt_skills/format/: pptd.md  shapes.md
agentmatrix-desktop/src-tauri/resources/matrix-template/workspace/agent_files/PPTGuru/home/SKILLS/ppt_skills/guideline/: generate_slides.md
agentmatrix-desktop/src-tauri/resources/matrix-template/workspace/agent_files/PPTGuru/home/SKILLS/ppt_skills/guideline/content/: outline_mode.md  summary_mode.md
agentmatrix-desktop/src-tauri/resources/matrix-template/workspace/agent_files/PPTGuru/home/SKILLS/ppt_skills/guideline/design/: template_mode.md
agentmatrix-desktop/src-tauri/resources/matrix-template/workspace/agent_files/PPTGuru/home/SKILLS/ppt_skills/guideline/search/: text_search.md
agentmatrix-desktop/src-tauri/resources/matrix-template/workspace/agent_files/PPTGuru/home/SKILLS/ppt_skills/scripts/: convert.sh  pptd.py  pptd2pptx.sh  pptd_check.py  pptd_common.py  pptd_convert.py  pptd_shape.py  pptd_syntax.py  pptd_text.py  screenshot.sh
agentmatrix-desktop/src-tauri/resources/matrix-template/workspace/agent_files/PPTGuru/home/SKILLS/ppt_skills/template/business_insight-2/: business_insight-2.pptd
agentmatrix-desktop/src-tauri/resources/matrix-template/workspace/agent_files/PPTGuru/home/SKILLS/ppt_skills/template/business_insight-3/: business_insight-3.pptd
agentmatrix-desktop/src-tauri/resources/matrix-template/workspace/agent_files/PPTGuru/home/SKILLS/ppt_skills/template/business_insight-5/: business_insight-5.pptd
agentmatrix-desktop/src-tauri/resources/matrix-template/workspace/agent_files/PPTGuru/home/SKILLS/ppt_skills/template/education-1/: education-1.pptd
agentmatrix-desktop/src-tauri/resources/matrix-template/workspace/agent_files/PPTGuru/home/SKILLS/ppt_skills/template/education-2/: education-2.pptd
agentmatrix-desktop/src-tauri/resources/matrix-template/workspace/agent_files/PPTGuru/home/SKILLS/ppt_skills/template/education-4/: education-4.pptd
agentmatrix-desktop/src-tauri/resources/matrix-template/workspace/agent_files/PPTGuru/home/SKILLS/ppt_skills/template/education-5/: education-5.pptd
agentmatrix-desktop/src-tauri/resources/matrix-template/workspace/agent_files/PPTGuru/home/SKILLS/ppt_skills/template/general-2/: general-2.pptd
agentmatrix-desktop/src-tauri/resources/matrix-template/workspace/agent_files/PPTGuru/home/SKILLS/ppt_skills/template/general-5/: general-5.pptd
agentmatrix-desktop/src-tauri/resources/matrix-template/workspace/agent_files/PPTGuru/home/SKILLS/ppt_skills/template/oracle-light/: oracle-light.pptd
agentmatrix-desktop/src-tauri/resources/matrix-template/workspace/agent_files/PPTGuru/home/SKILLS/ppt_skills/template/oracle-light-2/: oracle-light-2.pptd
agentmatrix-desktop/src-tauri/resources/matrix-template/workspace/agent_files/PPTGuru/home/SKILLS/ppt_skills/template/promotion-1/: promotion-1.pptd
agentmatrix-desktop/src-tauri/resources/matrix-template/workspace/agent_files/PPTGuru/home/SKILLS/ppt_skills/template/promotion-3/: promotion-3.pptd
agentmatrix-desktop/src-tauri/resources/matrix-template/workspace/agent_files/PPTGuru/home/SKILLS/ppt_skills/template/strategic-3/: strategic-3.pptd
agentmatrix-desktop/src-tauri/resources/matrix-template/workspace/agent_files/PPTGuru/home/SKILLS/ppt_skills/template/strategic-4/: strategic-4.pptd
agentmatrix-desktop/src-tauri/src/: config.rs  main.rs  main.rs.backup_before_cleanup  main.rs.backup_phase2
agentmatrix-desktop/src-tauri/src/commands/: backend.rs  config.rs  container.rs  filesystem.rs  matrix.rs  mod.rs  python_env.rs  state.rs  ui.rs
agentmatrix-desktop/src-tauri/src/ws/: client.rs  mod.rs  types.rs
(+1234 files in other folders)
