[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matrix-for-agents"
version = "0.1.4"
description = "An intelligent agent framework with pluggable skills and LLM integrations"
readme = "readme.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [
    {name = "Agent-Matrix Contributors"}
]
keywords = ["agents", "ai", "llm", "framework", "multi-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "websockets>=11.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "aioconsole>=0.6.0",
    "aiohttp>=3.8.0",
    "Jinja2>=3.1.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "trafilatura>=1.6.0",
    "DrissionPage>=4.0.0",
    "beautifulsoup4>=4.12.0",
    "marker-pdf==1.8.0",
    "PyMuPDF>=1.23.0",
    "libtmux>=0.52.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/webdkt/agentmatrix"
Documentation = "https://github.com/webdkt/agentmatrix/docs"
Repository = "https://github.com/webdkt/agentmatrix"
Issues = "https://github.com/webdkt/agentmatrix/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.md", "*.txt"]

[tool.setuptools.exclude-package-data]
"*" = ["*.db", ".env", "*.log"]
