[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentmatrix-core"
version = "0.7.0.0"
description = "Core execution engine for building AI agent applications — MicroAgent, AgentShell protocol, Cerebellum, and skill system"
readme = "readme.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [
    {name = "Agent-Matrix Contributors"}
]
keywords = ["agents", "ai", "llm", "framework", "multi-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "aiohttp>=3.8.0",
    "Jinja2>=3.1.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/webdkt/agentmatrix"
Documentation = "https://github.com/webdkt/agentmatrix/docs/core"
Repository = "https://github.com/webdkt/agentmatrix"
Issues = "https://github.com/webdkt/agentmatrix/issues"

[tool.setuptools]
package-dir = {"" = "src"}

# agentmatrix.core — includes core.backends, core.skills, core.utils as sub-packages
[tool.setuptools.packages]
find = {where = ["src"], include = ["agentmatrix.core*"]}

[tool.setuptools.package-data]
"agentmatrix.core" = ["*.yaml", "*.yml", "*.md", "*.txt"]

[tool.setuptools.exclude-package-data]
"*" = ["*.db", ".env", "*.log"]
